# referat

./: .gitignore  .prettierignore  README.md  electron-builder.yml  eslint.config.mjs  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  pages.yml  release-build.yml
diarization-server/: .gitignore  README.md  install.ps1  pyproject.toml  start-server.bat
diarization-server/scripts/: benchmark.py  encode_webm.py
diarization-server/src/diarization_server/: __init__.py  app.py  audio.py
docs/: arkitektur.md  design.md  produkt.md  signering.md
e2e/: run.mjs  runner.mjs
scripts/: mock-ai-server.mjs
site/: index.html
site/css/: styles.css
site/js/: main.js
src/main/: diarize.test.ts  diarize.ts  export.ts  index.ts  ipc.ts  ipcHandlers.ts  pipeline.ts  security.ts  settings.ts  speakerProfiles.test.ts  speakerProfiles.ts  storage.test.ts  storage.ts  updater.ts
src/main/providers/: diarization.test.ts  diarization.ts  shared.test.ts  shared.ts  summary.test.ts  summary.ts  transcription.test.ts  transcription.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  format.test.ts  format.ts  presets.ts  store.ts  strings.ts
src/renderer/src/assets/: main.css
src/renderer/src/audio/: recorder.ts
src/renderer/src/components/: ConnectionTest.tsx  LevelMeter.tsx  Markdown.test.ts  Markdown.tsx  Toasts.tsx  TopBar.tsx  (+2 more)
src/shared/: types.ts
wiki-content/: Architecture.md  Configuration.md  FAQ.md  Home.md  Installation.md  Local-AI-Setup.md  Roadmap.md  Speaker-Diarization.md
(+15 files in other folders)
