[project]
name = "diarization-server"
version = "0.1.0"
description = "Local speaker diarization companion server for the referat app"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyannote-audio>=4.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "python-multipart>=0.0.20",
    "av>=14.0",
    "numpy>=1.26",
    "torch>=2.7",
    "torchaudio>=2.7",
]

[project.scripts]
diarization-server = "diarization_server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diarization_server"]

# torch/torchaudio must come from the PyTorch CUDA index: the default PyPI
# wheels lack CUDA kernels for recent GPUs (RTX 50-series / Blackwell / sm_120
# needs cu128 or newer). CPU-only machines can still run these wheels with
# --device cpu; see README for a CPU-only install alternative.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
